--- a/index.html
+++ b/index.html
@@ -57,5 +57,11 @@
         </table>
     </div>
 
+    <!-- Agregar el video de YouTube -->
+    <div align="center">
+        <h2>Video Recomendado</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ydeG54wkxbM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
 </body>
 </html>
