--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
     <!-- Agregar el video de YouTube -->
     <div align="center">
         <h2>Video Recomendado</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ydeG54wkxbM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=wd7JqXouRRA" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
     </div>
-
 </body>
 </html>
