--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <h2>Compañeros de grupo</h2>
         <table align="center" border="0" cellpadding="5" cellspacing="0">
             <tr>
-                <td><a href="#">Compañero 1: Rodrigo Valdivia</a></td>
+                <td><a href="https://lotkrt.github.io/juanincacutipa.s-page/">Compañero 1: Juan Fernando Incacutipa Choque</a></td>
             </tr>
             <tr>
-                <td><a href="#">Compañero 2: Santiago Portugal</a></td>
+                <td><a href="https://juarezvnss.github.io/">Compañero 2: Brianna Vanesa Juarez Soto</a></td>
             </tr>
             <tr>
-                <td><a href="#">Compañero 3: Ignacio Ogusco</a></td>
+                <td><a href="https://matpepi.github.io/">Compañero 3: Andrea Belen Perochena Valdez</a></td>
             </tr>
         </table>
     </div>
