--- a/index.html
+++ b/index.html
@@ -55,8 +55,17 @@
                 <td><a href="https://matpepi.github.io/">Compañero 3: Andrea Belen Perochena Valdez</a></td>
             </tr>
         </table>
+
+        <h2>Profesores</h2>
+        <table align="center" border="0" cellpadding="5" cellspacing="0">
+            <tr>
+                <td><a href="https://www.linkedin.com/in/ecuadrosv?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank">LinkedIn: Profesor Ernesto Cuadros Vargas</a></td>
+            </tr>
+            <tr>
+                <td><a href="https://www.linkedin.com/in/josuemontenegro?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank">LinkedIn: Profesor Josué Montenegro Salazar</a></td>
+            </tr>
+        </table>
     </div>
 
-    
 </body>
 </html>
