--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="googleb6d5ebe58ec03022" />
+    <meta name="description" content="Perfil de Rodrigo Guevara Huerta, estudiante de Ingeniería Industrial en la Universidad Católica San Pablo.">
+    <meta name="keywords" content="Rodrigo Guevara, Ingeniería Industrial, Universidad Católica San Pablo, cursos UCSP">
+    <meta name="author" content="Rodrigo Guevara Huerta">
     <title>Perfil de Rodrigo Guevara Huerta</title>
 </head>
 <body>
